--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "This is the backend for the website",
+  "main": "util.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
+  },
+  "author": "Vaibhav Tiwari",
+  "license": "ISC"
 }
